# strict-mutable

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  strict-vars.cabal
.github/workflows/: haskell-ci.yml
src/Control/Concurrent/Chan/: Strict.hs
src/Control/Concurrent/MVar/: Strict.hs
src/Data/IORef/: Strict.hs
strict-mutable-base/: CHANGELOG.md  LICENSE  README.md  strict-mutable-base.cabal
strict-mutable-base/src/Control/Concurrent/Chan/: Strict.hs
strict-mutable-base/src/Control/Concurrent/MVar/: Strict.hs
strict-mutable-base/src/Data/IORef/: Strict.hs
