cabal-version:      3.0
build-type:         Simple
name:               strict-vars
version:            1.0.0.0
homepage:           https://github.com/arybczak/strict-vars
license:            BSD-3-Clause
license-file:       LICENSE
category:           Data
maintainer:         andrzej@rybczak.net
author:             Andrzej Rybczak
synopsis:           Strict variants of variables

description:        Strict (WHNF) variants of @IORef@ and @MVar@ for proactive
                    prevention of space leaks.

extra-doc-files:
  CHANGELOG.md
  README.md

tested-with: GHC == { 8.0.2, 8.2.2, 8.4.4, 8.6.5, 8.8.4, 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.4, 9.8.2 }

bug-reports:   https://github.com/arybczak/strict-vars/issues
source-repository head
  type:     git
  location: https://github.com/arybczak/strict-vars.git

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: GeneralizedNewtypeDeriving
                        LambdaCase
                        MagicHash
                        TupleSections
                        UnboxedTuples

library
    import:           language

    build-depends:    base >=4.9 && < 5
                    , deepseq >= 1.4.3.0

    hs-source-dirs:   src

    exposed-modules:  Control.Concurrent.Chan.Strict
                      Control.Concurrent.MVar.Strict
                      Data.IORef.Strict
